Added task support, logging support, enhanced config

--- a/flyway/etc/flyway.conf
+++ b/flyway/etc/flyway.conf
@@ -6,8 +6,14 @@ os_username = admin
 os_password = password
 
 [TARGET]
-os_auth_url = http://172.16.246.132:5000/v2.0
-os_tenant_id = 542852e883dd4c70aec46142a273e049
+os_auth_url = http://172.16.246.131:5000/v2.0
+os_tenant_id = 242852e883dd4c70aec46142a273e049
 os_tenant_name = admin
 os_username = admin
 os_password = password
+
+[DEFAULT]
+# loglevels can be CRITICAL, ERROR, WARNING, INFO, DEBUG
+loglevel = INFO
+logfile = /tmp/flyway.log
+logformat = %(asctime)s %(levelname)s [%(name)s] %(message)s
