--- a/flyway/etc/flyway.conf
+++ b/flyway/etc/flyway.conf
@@ -14,6 +14,6 @@ os_password = password
 
 [DEFAULT]
 # loglevels can be CRITICAL, ERROR, WARNING, INFO, DEBUG
-loglevel = INFO
+loglevel = DEBUG
 logfile = /tmp/flyway.log
 logformat = %(asctime)s %(levelname)s [%(name)s] %(message)s
