--- a/flyway/etc/flyway.conf
+++ b/flyway/etc/flyway.conf
@@ -1,19 +1,34 @@
 [SOURCE]
-os_auth_url = http://172.16.246.131:5000/v2.0
-os_tenant_id = 242852e883dd4c70aec46142a273e049
+os_auth_url = http://192.168.50.4:5000/v2.0
 os_tenant_name = admin
 os_username = admin
-os_password = password
+os_password = cGFzc3dvcmQ=
+os_cloud_name = OpenStack1
+
 
 [TARGET]
-os_auth_url = http://172.16.246.131:5000/v2.0
-os_tenant_id = 242852e883dd4c70aec46142a273e049
+os_auth_url = http://146.169.44.91:5000/v2.0
 os_tenant_name = admin
 os_username = admin
-os_password = password
+os_password = cGFzc3dvcmQ=
+os_cloud_name = OpenStack2
+
 
 [DEFAULT]
-# loglevels can be CRITICAL, ERROR, WARNING, INFO, DEBUG
-loglevel = DEBUG
-logfile = /tmp/flyway.log
-logformat = %(asctime)s %(levelname)s [%(name)s] %(message)s
+# log levels can be CRITICAL, ERROR, WARNING, INFO, DEBUG
+log_level = DEBUG
+log_file = /tmp/flyway.log
+log_format = %(asctime)s %(levelname)s [%(name)s] %(message)s
+
+
+[DATABASE]
+host = localhost
+user = root
+mysql_password = cGFzc3dvcmQ=
+db_name = flyway
+
+
+[EMAIL]
+smtpserver = smtp.gmail.com:587
+login = openstack.flyway@gmail.com
+password = flywaypassword
